--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -2,7 +2,7 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
-COPY src/ ./  # Copia el contenido de la carpeta src
+COPY . ./  # Copia el contenido actual de src/
 RUN dotnet restore "api.csproj"
 RUN dotnet publish "api.csproj" -c Release -o out
 
