se corrige dockerfile nuevamente

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,10 @@
 # Build stage
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /app/src
+WORKDIR /app
 
 # Copiar csproj y restaurar
-COPY src/*.csproj ./
+COPY src/*.csproj ./src/
+WORKDIR /app/src
 RUN dotnet restore
 
 # Copiar todo el código y publicar
